fix alignment + styling for leaderboard

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -3,6 +3,7 @@ body {
 	padding-top: 60px;
 	padding-left: 20px;
 	background-image: url('low_contrast_linen.png');
+	color: #DBDBDB;
 }
 
 .navbar {
