--- a/app/assets/stylesheets/feeds.css.scss
+++ b/app/assets/stylesheets/feeds.css.scss
@@ -3,6 +3,7 @@
 	margin:	auto;
 	width: 980px;
 	min-height: 100%;
+	color: black;
 
 	#feed_header {
 		margin:	auto;
@@ -168,16 +169,22 @@
   margin-top: 30px;
   /*min-height: 100%;*/
 
-  .title a {
-  	color: #298CCB;
-	font-size: 20px; 
+
+  .title {
+  	margin-bottom: 10px;
+
+  	a {
+  		color: #298CCB;
+			font-size: 20px; 
+  	}
   }
 
   #header {
   	height:28px;
-  	background: white;
+  	background: #DBDBDB;
   	font-size: 10px;
   	border-bottom: none;
+  	color: black;	
 
   	p {
   		position: relative;
@@ -196,7 +203,7 @@
   }
 
   #list {	
-  	background: white;
+  	background: white;  	
 
 		.score {
 			padding:0 5px;
@@ -206,7 +213,7 @@
 			line-height: 39px;
 
 			&.even {
-				background-color:#fdfdfd;//#f5f5f5;
+				background-color:#fdfdfd;
 			}
 
 			.name {
@@ -216,10 +223,12 @@
 			}
 
 			.correct {
+				width: 20px;
 				padding: 0px 10px;
 				float: right;
 				font-size: 20px;
 				color: #298CCB;	
+				margin-bottom: 0px;
 			}
 		}	
   }
